<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="logo_ballot">Logo: Ballot</string>
    <string name="find_representative_button_text">Find My Representatives</string>
    <string name="upcoming_elections_button_text">Upcoming Elections</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="error_election_detail_not_found">Can\'t open this election</string>
    <string name="follow_election_button_text">Follow election</string>
    <string name="unfollow_election_button_text">Unfollow election</string>
    <string name="loading">Loading…</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_representative_button_text">Find My Representative</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to use this feature.</string>
    <string name="picture_representative_photo">Picture: Representative photo</string>
    <string name="icon_twitter">Icon twitter</string>
    <string name="icon_fb">Icon facebook</string>
    <string name="icon_www">Icon web</string>

</resources>
